--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,6 +75,7 @@ a {
     position: relative;
     display: flex;
     flex-direction: column;
+    justify-content: center;
     background: #E6F0FF;
     height: calc(100vh - 90px);
 
@@ -119,15 +120,11 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    margin-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
 
-.hero .sub-title {
+.hero-wrap .sub-title {
     color: #687690;
     font-size: 1.8rem;
     line-height: 1.5;
@@ -135,7 +132,7 @@ a {
     letter-spacing: 0.01em;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     color: #000336;
     font-size: 6.2rem;
@@ -143,7 +140,7 @@ a {
     line-height: 1.19;
 }
 
-.hero .desc {
+.hero-wrap .desc {
 
     margin-top: 30px;
     font-size: 1.8rem;
